Use only valid character for localization message key.
Rules: https://developer.mozilla.org/en-US/Add-ons/WebExtensions/API/i18n/Locale-Specific_Message_reference#Member_details

Commands:
$ egrep '^  "' -r _locales | cut -d : -f 2 | cut -d '"' -f 2 | grep '\.' | sort | uniq > /tmp/keys
$ paste -d / /tmp/keys <(cat /tmp/keys | tr '.-' '__') | sed -r -e 's;^;-e s/;' -e 's;$;/g;' | paste -s -d ' ' - > /tmp/patterns
$ git grep -f <(cat /tmp/keys) | cut -d : -f 1 | uniq | xargs sed -i $(cat /tmp/patterns) '{}'

--- a/webextensions/_locales/zh_CN/messages.json
+++ b/webextensions/_locales/zh_CN/messages.json
@@ -5,34 +5,34 @@
   "sidebarTitle": { "message": "Tree Style Tab" },
   "sidebarToggleDescription": { "message": "切换“Tree Style Tab”侧栏" },
 
-  "tab.closebox.tab.tooltip": { "message": "关闭标签页" },
-  "tab.closebox.tree.tooltip": { "message": "关闭树" },
-  "tab.soundButton.muted.tooltip": { "message": "取消静音标签页" },
-  "tab.soundButton.playing.tooltip": { "message": "静音标签页" },
-  "tab.twisty.expanded.tooltip": { "message": "折叠树" },
-  "tab.twisty.collapsed.tooltip": { "message": "展开树" },
-  "tab.tree.tooltip": { "message": "$TREE$\n  ...和其余 $COUNT$ 个标签页",
+  "tab_closebox_tab_tooltip": { "message": "关闭标签页" },
+  "tab_closebox_tree_tooltip": { "message": "关闭树" },
+  "tab_soundButton_muted_tooltip": { "message": "取消静音标签页" },
+  "tab_soundButton_playing_tooltip": { "message": "静音标签页" },
+  "tab_twisty_expanded_tooltip": { "message": "折叠树" },
+  "tab_twisty_collapsed_tooltip": { "message": "展开树" },
+  "tab_tree_tooltip": { "message": "$TREE$\n  ...和其余 $COUNT$ 个标签页",
     "placeholders": {
       "tree": { "content": "$1", "example": "* Tree\n  * Style\n    * Tab" },
       "count": { "content": "$2", "example": "3" }
     }},
-  "tabbar.newTabButton.tooltip": { "message": "打开一个新标签页" },
-  "tabbar.newTabWithContexualIdentity.tooltip": { "message": "新建身份标签页" },
+  "tabbar_newTabButton_tooltip": { "message": "打开一个新标签页" },
+  "tabbar_newTabWithContexualIdentity_tooltip": { "message": "新建身份标签页" },
 
-  "groupTab.label": { "message": "$TITLE$ 及更多",
+  "groupTab_label": { "message": "$TITLE$ 及更多",
     "placeholders": {
       "title": { "content": "$1", "example": "title" }
     }},
-  "groupTab.label.default": { "message": "组" },
+  "groupTab_label_default": { "message": "组" },
 
-  "bookmarkFolder.label": { "message": "$TITLE$ 及更多",
+  "bookmarkFolder_label": { "message": "$TITLE$ 及更多",
     "placeholders": {
       "title": { "content": "$1", "example": "title" }
     }},
-  "bookmarkFolder.label.default": { "message": "已加书签的树" },
+  "bookmarkFolder_label_default": { "message": "已加书签的树" },
 
-  "bookmarkTree.notification.title": { "message": "成功为树添加书签" },
-  "bookmarkTree.notification.message": { "message": "包括“$TITLE$”在内的 $COUNT$ 个标签页已添加为“$PARENT$”下的书签文件夹",
+  "bookmarkTree_notification_title": { "message": "成功为树添加书签" },
+  "bookmarkTree_notification_message": { "message": "包括“$TITLE$”在内的 $COUNT$ 个标签页已添加为“$PARENT$”下的书签文件夹",
     "placeholders": {
       "title": { "content": "$1", "example": "Title" },
       "count": { "content": "$2", "example": "2" },
@@ -40,161 +40,161 @@
     }},
 
 
-  "bookmarkTabs.notification.title": { "message": "成功为标签页添加书签" },
-  "bookmarkTabs.notification.message": { "message": "$COUNT$ 个标签页（包括“$TITLE$”）已加为书签，新文件夹位于“$PARENT$”。",
+  "bookmarkTabs_notification_title": { "message": "成功为标签页添加书签" },
+  "bookmarkTabs_notification_message": { "message": "$COUNT$ 个标签页（包括“$TITLE$”）已加为书签，新文件夹位于“$PARENT$”。",
     "placeholders": {
       "title": { "content": "$1", "example": "Title" },
       "count": { "content": "$2", "example": "2" },
       "parent": { "content": "$3", "example": "Parent Folder" }
     }},
 
-  "message.updatedFromLegacy.description": { "message": "Tree Style Tab 目前基于 WebExtensions 技术以支持 Firefox 57 及后续版本。它提供一个侧栏以作为可选用的垂直标签栏。如果您没看到，按“F1”键或单击工具栏中的“Tree Style Tab”按钮来激活 Tree Style Tab 侧栏面板。" },
+  "message_updatedFromLegacy_description": { "message": "Tree Style Tab 目前基于 WebExtensions 技术以支持 Firefox 57 及后续版本。它提供一个侧栏以作为可选用的垂直标签栏。如果您没看到，按“F1”键或单击工具栏中的“Tree Style Tab”按钮来激活 Tree Style Tab 侧栏面板。" },
 
 
-  "context.reloadTree.label": { "message": "重新载入此树(&R)" },
-  "context.reloadDescendants.label": { "message": "重新载入子项(&E)" },
-  "context.closeTree.label": { "message": "关闭此树(&C)" },
-  "context.closeDescendants.label": { "message": "关闭子项(&L)" },
-  "context.closeOthers.label": { "message": "关闭其他标签页（不含此树）(&O)" },
-  "context.collapseAll.label": { "message": "全部折叠(&P)" },
-  "context.expandAll.label": { "message": "全部展开(&X)" },
-  "context.bookmarkTree.label": { "message": "将此树加为书签(&B)…" },
+  "context_reloadTree_label": { "message": "重新载入此树(&R)" },
+  "context_reloadDescendants_label": { "message": "重新载入子项(&E)" },
+  "context_closeTree_label": { "message": "关闭此树(&C)" },
+  "context_closeDescendants_label": { "message": "关闭子项(&L)" },
+  "context_closeOthers_label": { "message": "关闭其他标签页（不含此树）(&O)" },
+  "context_collapseAll_label": { "message": "全部折叠(&P)" },
+  "context_expandAll_label": { "message": "全部展开(&X)" },
+  "context_bookmarkTree_label": { "message": "将此树加为书签(&B)…" },
 
 
-  "config.appearance.caption": { "message": "外观" },
+  "config_appearance_caption": { "message": "外观" },
 
-  "config.sidebarPosition.caption": { "message": "侧栏内容的外观（适配侧栏位置）" },
-  "config.sidebarPosition.left": { "message": "左侧" },
-  "config.sidebarPosition.right": { "message": "右侧" },
+  "config_sidebarPosition_caption": { "message": "侧栏内容的外观（适配侧栏位置）" },
+  "config_sidebarPosition_left": { "message": "左侧" },
+  "config_sidebarPosition_right": { "message": "右侧" },
 
-  "config.scrollbarMode.caption": { "message": "Scrollbar" },
-  "config.scrollbarMode.default": { "message": "Default" },
-  "config.scrollbarMode.narrow":  { "message": "Narrow" },
-  "config.scrollbarMode.hide":    { "message": "Hide" },
+  "config_scrollbarMode_caption": { "message": "Scrollbar" },
+  "config_scrollbarMode_default": { "message": "Default" },
+  "config_scrollbarMode_narrow":  { "message": "Narrow" },
+  "config_scrollbarMode_hide":    { "message": "Hide" },
 
-  "config.style.caption": { "message": "主题" },
-  "config.style.plain": { "message": "朴素" },
-  "config.style.plain-dark": { "message": "朴素暗" },
-  "config.style.vertigo": { "message": "眩晕" },
-  "config.style.mixed": { "message": "错综" },
-  "config.style.metal": { "message": "金属" },
-  "config.style.sidebar": { "message": "侧栏" },
+  "config_style_caption": { "message": "主题" },
+  "config_style_plain": { "message": "朴素" },
+  "config_style_plain_dark": { "message": "朴素暗" },
+  "config_style_vertigo": { "message": "眩晕" },
+  "config_style_mixed": { "message": "错综" },
+  "config_style_metal": { "message": "金属" },
+  "config_style_sidebar": { "message": "侧栏" },
 
-  "config.maxTreeLevel.before": { "message": "缩进标签页，最多" },
-  "config.maxTreeLevel.after": { "message": "层（负值则为无限）" },
+  "config_maxTreeLevel_before": { "message": "缩进标签页，最多" },
+  "config_maxTreeLevel_after": { "message": "层（负值则为无限）" },
 
-  "config.faviconizePinnedTabs.label": { "message": "已固定标签页只显示图标" },
+  "config_faviconizePinnedTabs_label": { "message": "已固定标签页只显示图标" },
 
-  "config.animation.label": { "message": "启用动画效果" },
-
-
-  "config.context.caption": { "message": "增加上下文菜单项" },
+  "config_animation_label": { "message": "启用动画效果" },
 
 
-  "config.newTab.caption": { "message": "新建标签页行为" },
-
-  "config.autoAttachOnNewTabCommand.before": { "message": "新建空白标签页打开为" },
-  "config.autoAttachOnNewTabCommand.independent": { "message": "一个独立的标签页" },
-  "config.autoAttachOnNewTabCommand.child": { "message": "当前标签页的子项" },
-  "config.autoAttachOnNewTabCommand.sibling": { "message": "当前标签页的同级节点" },
-  "config.autoAttachOnNewTabCommand.nextSibling": { "message": "当前标签页的下方（同级）" },
-  "config.autoAttachOnNewTabCommand.after": { "message": "" },
-  "config.guessNewOrphanTabAsOpenedByNewTabCommandUrl.before": { "message": "新标签页带有下列网址时，猜测它是通过“新建标签页”命令（例如键盘快捷键）打开：" },
-  "config.guessNewOrphanTabAsOpenedByNewTabCommandUrl.after": { "message": "" },
-
-  "config.autoAttachOnNewTabButtonMiddleClick.before": { "message": "中键单击“新建标签页”按钮时，新建空白标签页为" },
-  "config.autoAttachOnNewTabButtonMiddleClick.independent": { "message": "一个独立的标签页" },
-  "config.autoAttachOnNewTabButtonMiddleClick.child": { "message": "当前标签页的子项" },
-  "config.autoAttachOnNewTabButtonMiddleClick.sibling": { "message": "当前标签页的同级节点" },
-  "config.autoAttachOnNewTabButtonMiddleClick.nextSibling": { "message": "当前标签页的下方（同级）" },
-  "config.autoAttachOnNewTabButtonMiddleClick.after": { "message": "" },
-
-  "config.autoAttachOnDuplicated.before": { "message": "中键单击“重新载入”按钮时，复制标签页为" },
-  "config.autoAttachOnDuplicated.independent": { "message": "一个独立的标签页" },
-  "config.autoAttachOnDuplicated.child": { "message": "当前标签页的子项" },
-  "config.autoAttachOnDuplicated.sibling": { "message": "当前标签页的同级节点" },
-  "config.autoAttachOnDuplicated.nextSibling": { "message": "当前标签页的下方（同级）" },
-  "config.autoAttachOnDuplicated.after": { "message": "" },
-
-  "config.insertNewChildAt.caption": { "message": "新建标签页的插入位置" },
-  "config.insertNewChildAt.noControl": { "message": "不控制（尊重 Firefox 或其他标签页扩展的决定）" },
-  "config.insertNewChildAt.first": { "message": "插入到树的顶端，作为其首个子标签页" },
-  "config.insertNewChildAt.last": { "message": "放在树的最后" },
-
-  "config.insertNewTabFromPinnedTabAt.caption": { "message": "从固定标签页打开的新标签页插入在" },
-  "config.insertNewTabFromPinnedTabAt.noControl": { "message": "不控制（尊重 Firefox 或其他标签页扩展的决定）" },
-  "config.insertNewTabFromPinnedTabAt.first": { "message": "插入到树的顶端，作为其首个子标签页" },
-  "config.insertNewTabFromPinnedTabAt.last": { "message": "放在树的最后" },
-
-  "config.autoGroupNewTabs.before": { "message": "" },
-  "config.autoGroupNewTabs.after": { "message": "毫秒后自动分组打开的标签页" },
+  "config_context_caption": { "message": "增加上下文菜单项" },
 
 
-  "config.treeBehavior.caption": { "message": "树行为" },
+  "config_newTab_caption": { "message": "新建标签页行为" },
 
-  "config.autoCollapseExpandSubtreeOnAttach.label": { "message": "新树展开时，自动折叠其他树" },
-  "config.autoCollapseExpandSubtreeOnSelect.label": { "message": "标签页获得焦点时，自动展开该树并折叠其他树" },
-  "config.autoCollapseExpandSubtreeOnSelectExceptCurrentTabRemove.label": { "message": "排除当前标签页关闭引发的焦点改变" },
-  "config.collapseExpandSubtreeByDblClick.label": { "message": "双击标签页折叠/展开树" },
+  "config_autoAttachOnNewTabCommand_before": { "message": "新建空白标签页打开为" },
+  "config_autoAttachOnNewTabCommand_independent": { "message": "一个独立的标签页" },
+  "config_autoAttachOnNewTabCommand_child": { "message": "当前标签页的子项" },
+  "config_autoAttachOnNewTabCommand_sibling": { "message": "当前标签页的同级节点" },
+  "config_autoAttachOnNewTabCommand_nextSibling": { "message": "当前标签页的下方（同级）" },
+  "config_autoAttachOnNewTabCommand_after": { "message": "" },
+  "config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_before": { "message": "新标签页带有下列网址时，猜测它是通过“新建标签页”命令（例如键盘快捷键）打开：" },
+  "config_guessNewOrphanTabAsOpenedByNewTabCommandUrl_after": { "message": "" },
 
-  "config.closeParentBehavior.close": { "message": "关闭子标签页" },
-  "config.closeParentBehavior.replaceWithGroupTab": { "message": "用虚构标签页替换已关闭的父标签页从而保留树" },
-  "config.closeParentBehavior.promoteFirst": { "message": "将第一个子标签页作为新的父标签页" },
-  "config.closeParentBehavior.promoteAll": { "message": "所有子标签页的级别按被关闭的父标签页级别提升" },
-  "config.promoteFirstChildForClosedRoot.label": { "message": "如果被关闭的父标签页没有父项，则将首个子标签页提升为父项" },
-  "config.closeParentBehavior.detach": { "message": "释放该树的子标签页" },
+  "config_autoAttachOnNewTabButtonMiddleClick_before": { "message": "中键单击“新建标签页”按钮时，新建空白标签页为" },
+  "config_autoAttachOnNewTabButtonMiddleClick_independent": { "message": "一个独立的标签页" },
+  "config_autoAttachOnNewTabButtonMiddleClick_child": { "message": "当前标签页的子项" },
+  "config_autoAttachOnNewTabButtonMiddleClick_sibling": { "message": "当前标签页的同级节点" },
+  "config_autoAttachOnNewTabButtonMiddleClick_nextSibling": { "message": "当前标签页的下方（同级）" },
+  "config_autoAttachOnNewTabButtonMiddleClick_after": { "message": "" },
+
+  "config_autoAttachOnDuplicated_before": { "message": "中键单击“重新载入”按钮时，复制标签页为" },
+  "config_autoAttachOnDuplicated_independent": { "message": "一个独立的标签页" },
+  "config_autoAttachOnDuplicated_child": { "message": "当前标签页的子项" },
+  "config_autoAttachOnDuplicated_sibling": { "message": "当前标签页的同级节点" },
+  "config_autoAttachOnDuplicated_nextSibling": { "message": "当前标签页的下方（同级）" },
+  "config_autoAttachOnDuplicated_after": { "message": "" },
+
+  "config_insertNewChildAt_caption": { "message": "新建标签页的插入位置" },
+  "config_insertNewChildAt_noControl": { "message": "不控制（尊重 Firefox 或其他标签页扩展的决定）" },
+  "config_insertNewChildAt_first": { "message": "插入到树的顶端，作为其首个子标签页" },
+  "config_insertNewChildAt_last": { "message": "放在树的最后" },
+
+  "config_insertNewTabFromPinnedTabAt_caption": { "message": "从固定标签页打开的新标签页插入在" },
+  "config_insertNewTabFromPinnedTabAt_noControl": { "message": "不控制（尊重 Firefox 或其他标签页扩展的决定）" },
+  "config_insertNewTabFromPinnedTabAt_first": { "message": "插入到树的顶端，作为其首个子标签页" },
+  "config_insertNewTabFromPinnedTabAt_last": { "message": "放在树的最后" },
+
+  "config_autoGroupNewTabs_before": { "message": "" },
+  "config_autoGroupNewTabs_after": { "message": "毫秒后自动分组打开的标签页" },
 
 
-  "config.advanced.caption": { "message": "高级" },
+  "config_treeBehavior_caption": { "message": "树行为" },
 
-  "config.userStyleRules.label": { "message": "侧栏内容的额外样式规则" },
+  "config_autoCollapseExpandSubtreeOnAttach_label": { "message": "新树展开时，自动折叠其他树" },
+  "config_autoCollapseExpandSubtreeOnSelect_label": { "message": "标签页获得焦点时，自动展开该树并折叠其他树" },
+  "config_autoCollapseExpandSubtreeOnSelectExceptCurrentTabRemove_label": { "message": "排除当前标签页关闭引发的焦点改变" },
+  "config_collapseExpandSubtreeByDblClick_label": { "message": "双击标签页折叠/展开树" },
 
-  "config.importedConfigsFromLegacy.label": { "message": "迁移旧配置" },
-  "config.legacyConfigsNextMigrationVersion.before": { "message": "下次启动时迁移" },
-  "config.legacyConfigsNextMigrationVersion.after": { "message": "级配置" },
-  "config.legacyConfigsNextMigrationVersion.currentLevel.before": { "message": "（目前可用的配置级别为" },
-  "config.legacyConfigsNextMigrationVersion.currentLevel.after": { "message": " 或更低）" },
-  "config.importedConfigsFromLegacy.placeholder": { "message": "在这里粘贴旧的配置数据" },
-  "migration.configs.notification.title": { "message": "Tree Style Tab：配置已成功迁移" },
-  "migration.configs.notification.message": { "message": "旧版本的配置已成功应用。" },
+  "config_closeParentBehavior_close": { "message": "关闭子标签页" },
+  "config_closeParentBehavior_replaceWithGroupTab": { "message": "用虚构标签页替换已关闭的父标签页从而保留树" },
+  "config_closeParentBehavior_promoteFirst": { "message": "将第一个子标签页作为新的父标签页" },
+  "config_closeParentBehavior_promoteAll": { "message": "所有子标签页的级别按被关闭的父标签页级别提升" },
+  "config_promoteFirstChildForClosedRoot_label": { "message": "如果被关闭的父标签页没有父项，则将首个子标签页提升为父项" },
+  "config_closeParentBehavior_detach": { "message": "释放该树的子标签页" },
 
-  "config.importedTreeStructureFromLegacy.label": { "message": "迁移旧树" },
-  "config.migrateLegacyTreeStructure.label": { "message": "下次启动时迁移旧树" },
-  "config.importedTreeStructureFromLegacy.placeholder": { "message": "在这里粘贴旧树的迁移数据" },
-  "migration.tree.notification.title": { "message": "Tree Style Tab：标签页树迁移成功" },
-  "migration.tree.notification.message.withSession": { "message": "$COUNT$ 个窗口已成功恢复，具有先前的会话信息。",
+
+  "config_advanced_caption": { "message": "高级" },
+
+  "config_userStyleRules_label": { "message": "侧栏内容的额外样式规则" },
+
+  "config_importedConfigsFromLegacy_label": { "message": "迁移旧配置" },
+  "config_legacyConfigsNextMigrationVersion_before": { "message": "下次启动时迁移" },
+  "config_legacyConfigsNextMigrationVersion_after": { "message": "级配置" },
+  "config_legacyConfigsNextMigrationVersion_currentLevel_before": { "message": "（目前可用的配置级别为" },
+  "config_legacyConfigsNextMigrationVersion_currentLevel_after": { "message": " 或更低）" },
+  "config_importedConfigsFromLegacy_placeholder": { "message": "在这里粘贴旧的配置数据" },
+  "migration_configs_notification_title": { "message": "Tree Style Tab：配置已成功迁移" },
+  "migration_configs_notification_message": { "message": "旧版本的配置已成功应用。" },
+
+  "config_importedTreeStructureFromLegacy_label": { "message": "迁移旧树" },
+  "config_migrateLegacyTreeStructure_label": { "message": "下次启动时迁移旧树" },
+  "config_importedTreeStructureFromLegacy_placeholder": { "message": "在这里粘贴旧树的迁移数据" },
+  "migration_tree_notification_title": { "message": "Tree Style Tab：标签页树迁移成功" },
+  "migration_tree_notification_message_withSession": { "message": "$COUNT$ 个窗口已成功恢复，具有先前的会话信息。",
     "placeholders": {
       "count": { "content": "$1", "example": "2" }
     }},
-  "migration.tree.notification.message.withoutSession": { "message": "$COUNT$ 个窗口的树结构已恢复。没有恢复这些窗口中的标签页的会话信息。",
+  "migration_tree_notification_message_withoutSession": { "message": "$COUNT$ 个窗口的树结构已恢复。没有恢复这些窗口中的标签页的会话信息。",
     "placeholders": {
       "count": { "content": "$1", "example": "2" }
     }},
 
 
-  "config.debug.caption": { "message": "开发" },
-  "config.debug.label": { "message": "调试模式" },
-  "config.acccelaratedTabDuplication.label": { "message": "加速标签页复制操作（过程中会看到非稳定的变化）" },
-  "config.maximumAcceptableDelayForTabDuplication.before": { "message": "中止复制标签页，如果按住超过" },
-  "config.maximumAcceptableDelayForTabDuplication.after": { "message": "毫秒。" },
+  "config_debug_caption": { "message": "开发" },
+  "config_debug_label": { "message": "调试模式" },
+  "config_acccelaratedTabDuplication_label": { "message": "加速标签页复制操作（过程中会看到非稳定的变化）" },
+  "config_maximumAcceptableDelayForTabDuplication_before": { "message": "中止复制标签页，如果按住超过" },
+  "config_maximumAcceptableDelayForTabDuplication_after": { "message": "毫秒。" },
 
-  "config.all.caption": { "message": "所有配置" },
+  "config_all_caption": { "message": "所有配置" },
 
 
-  "tabContextMenu.reload.label":      { "message": "重新载入标签页(&R)" },
-  "tabContextMenu.mute.label":        { "message": "静音标签页(&M)" },
-  "tabContextMenu.unmute.label":      { "message": "取消静音标签页(&M)" },
+  "tabContextMenu_reload_label":      { "message": "重新载入标签页(&R)" },
+  "tabContextMenu_mute_label":        { "message": "静音标签页(&M)" },
+  "tabContextMenu_unmute_label":      { "message": "取消静音标签页(&M)" },
 
-  "tabContextMenu.pin.label":         { "message": "固定标签页(&P)" },
-  "tabContextMenu.unpin.label":       { "message": "取消固定标签页(&B)" },
-  "tabContextMenu.duplicate.label":   { "message": "创建标签页副本(&D)" },
-  "tabContextMenu.tearOff.label":     { "message": "移动到新窗口(&W)" },
+  "tabContextMenu_pin_label":         { "message": "固定标签页(&P)" },
+  "tabContextMenu_unpin_label":       { "message": "取消固定标签页(&B)" },
+  "tabContextMenu_duplicate_label":   { "message": "创建标签页副本(&D)" },
+  "tabContextMenu_tearOff_label":     { "message": "移动到新窗口(&W)" },
 
-  "tabContextMenu.reloadAll.label":   { "message": "重新载入所有标签页(&A)" },
-  "tabContextMenu.bookmarkAll.label": { "message": "为全部标签页添加书签(&T)…" },
-  "tabContextMenu.closeAfter.label":  { "message": "关闭右侧标签页(&I)" },
-  "tabContextMenu.closeOther.label":  { "message": "关闭其他标签页(&O)" },
+  "tabContextMenu_reloadAll_label":   { "message": "重新载入所有标签页(&A)" },
+  "tabContextMenu_bookmarkAll_label": { "message": "为全部标签页添加书签(&T)…" },
+  "tabContextMenu_closeAfter_label":  { "message": "关闭右侧标签页(&I)" },
+  "tabContextMenu_closeOther_label":  { "message": "关闭其他标签页(&O)" },
 
-  "tabContextMenu.undoClose.label":   { "message": "撤销关闭标签页(&U)" },
-  "tabContextMenu.close.label":       { "message": "关闭标签页(&C)" }
+  "tabContextMenu_undoClose_label":   { "message": "撤销关闭标签页(&U)" },
+  "tabContextMenu_close_label":       { "message": "关闭标签页(&C)" }
 }
