--- a/webextensions/_locales/zh_TW/messages.json
+++ b/webextensions/_locales/zh_TW/messages.json
@@ -133,7 +133,8 @@
   "config_context_caption": { "message": "額外右鍵選單項" },
 
 
-  "config_newTab_caption": { "message": "開新分開時" },
+  "config_newTab_caption": { "message": "新分頁行為" },
+
 
   "config_autoAttachOnNewTabCommand_before": { "message": "將新的空白頁開啟為" },
   "config_autoAttachOnNewTabCommand_independent": { "message": "獨立分頁" },
@@ -178,7 +179,7 @@
   "config_inheritContextualIdentityToNewChildTab_label": { "message": "開新分頁時，自動繼承父分頁的容器類別" },
 
 
-  "config_treeBehavior_caption": { "message": "樹狀結構"},
+  "config_treeBehavior_caption": { "message": "樹行為"},
 
   "config_moveFocusInTreeForClosedCurrentTab_caption": { "message": "關閉目前分頁時，若為最後一個子分頁則" },
   "config_moveFocusInTreeForClosedCurrentTab_true": { "message": "切換到前一個分頁" },
