Add configuration UI to change keyboard shortcuts

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -235,6 +235,9 @@
   "config_warnOnCloseTabs_label": { "message": "Warn me when I attempt to close multiple tabs" },
 
 
+  "config_shortcuts_caption": { "message": "Keyboard shortcuts" },
+
+
   "config_advanced_caption": { "message": "Advanced" },
 
   "config_userStyleRules_label": { "message": "Extra style rules for sidebar contents" },
