Define commands for keyboard shortcut

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -5,6 +5,23 @@
   "sidebarTitle": { "message": "Tree Style Tab" },
   "sidebarToggleDescription": { "message": "Toggle \"Tree Style Tab\" Sidebar" },
 
+  "command_indent":                { "message": "Indent Current Tab" },
+  "command_outdent":               { "message": "Outdent Current Tab" },
+  "command_tabMoveUp":             { "message": "Move Current Tab Up" },
+  "command_treeMoveUp":            { "message": "Move Current Tree Up" },
+  "command_tabMoveDown":           { "message": "Move Current Tab Down" },
+  "command_treeMoveDown":          { "message": "Move Current Tree Down" },
+  "command_focusPrevious":         { "message": "Focus to Previous Tab (expand tree)" },
+  "command_focusPreviousSilently": { "message": "Focus to Previous Tab (don't expand tree)" },
+  "command_focusNext":             { "message": "Focus to Next Tab (expand tree)" },
+  "command_focusNextSilently":     { "message": "Focus to Next Tab (don't expand tree)" },
+  "command_tabbarUp":              { "message": "Scroll Tabs Up by Line" },
+  "command_tabbarPageUp":          { "message": "Scroll Tabs Up by Page" },
+  "command_tabbarHome":            { "message": "Scroll Tabs to Top" },
+  "command_tabbarDown":            { "message": "Scroll Tabs Down by Line" },
+  "command_tabbarPageDown":        { "message": "Scroll Tabs Down by Page" },
+  "command_tabbarEnd":             { "message": "Scroll Tabs to End" },
+
   "tab_closebox_tab_tooltip": { "message": "Close tab" },
   "tab_closebox_tree_tooltip": { "message": "Close tree" },
   "tab_soundButton_muted_tooltip": { "message": "Unmute tab" },
