Translate labels for commands

--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -5,22 +5,22 @@
   "sidebarTitle": { "message": "ツリー型タブ" },
   "sidebarToggleDescription": { "message": "ツリー型タブのサイドバーの表示・非表示を切り替える" },
 
-  "command_indent":                { "message": "Indent Current Tab" },
-  "command_outdent":               { "message": "Outdent Current Tab" },
-  "command_tabMoveUp":             { "message": "Move Current Tab Up" },
-  "command_treeMoveUp":            { "message": "Move Current Tree Up" },
-  "command_tabMoveDown":           { "message": "Move Current Tab Down" },
-  "command_treeMoveDown":          { "message": "Move Current Tree Down" },
-  "command_focusPrevious":         { "message": "Focus to Previous Tab (expand tree)" },
-  "command_focusPreviousSilently": { "message": "Focus to Previous Tab (don't expand tree)" },
-  "command_focusNext":             { "message": "Focus to Next Tab (expand tree)" },
-  "command_focusNextSilently":     { "message": "Focus to Next Tab (don't expand tree)" },
-  "command_tabbarUp":              { "message": "Scroll Tabs Up by Line" },
-  "command_tabbarPageUp":          { "message": "Scroll Tabs Up by Page" },
-  "command_tabbarHome":            { "message": "Scroll Tabs to Top" },
-  "command_tabbarDown":            { "message": "Scroll Tabs Down by Line" },
-  "command_tabbarPageDown":        { "message": "Scroll Tabs Down by Page" },
-  "command_tabbarEnd":             { "message": "Scroll Tabs to End" },
+  "command_indent":                { "message": "現在のタブを1階層深くする" },
+  "command_outdent":               { "message": "現在のタブを1階層浅くする" },
+  "command_tabMoveUp":             { "message": "現在のタブを単体で1つ上に移動" },
+  "command_treeMoveUp":            { "message": "現在のタブとその配下のタブを1つ上に移動" },
+  "command_tabMoveDown":           { "message": "現在のタブを単体で1つ下に移動" },
+  "command_treeMoveDown":          { "message": "現在のタブとその配下のタブを1つ下に移動" },
+  "command_focusPrevious":         { "message": "前のタブにフォーカスを移す（ツリーを展開する）" },
+  "command_focusPreviousSilently": { "message": "前のタブにフォーカスを移す（ツリーを展開しない）" },
+  "command_focusNext":             { "message": "次のタブにフォーカスを移す（ツリーを展開する）" },
+  "command_focusNextSilently":     { "message": "次のタブにフォーカスを移す（ツリーを展開しない）" },
+  "command_tabbarUp":              { "message": "タブの一覧を1行上にスクロール" },
+  "command_tabbarPageUp":          { "message": "タブの一覧を1ページ上にスクロール" },
+  "command_tabbarHome":            { "message": "タブの一覧を先頭までスクロール" },
+  "command_tabbarDown":            { "message": "タブの一覧を1行下にスクロール" },
+  "command_tabbarPageDown":        { "message": "タブの一覧を1ページ下にスクロール" },
+  "command_tabbarEnd":             { "message": "タブの一覧を末尾までスクロール" },
 
   "tab_closebox_tab_tooltip": { "message": "タブを閉じる" },
   "tab_closebox_tree_tooltip": { "message": "ツリーを閉じる" },
