Add configuration UI to change keyboard shortcuts

--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -235,6 +235,9 @@
   "config_warnOnCloseTabs_label": { "message": "Warnen wenn mehrere Tabs geschlossen werden sollen" },
   
   
+  "config_shortcuts_caption": { "message": "Tastenkombinationen" },
+  
+  
   "config_advanced_caption": { "message": "Erweitert" },
 
   "config_userStyleRules_label": { "message": "Style-Regeln für Sidebar-Inhalte" },
