Define commands for keyboard shortcut

--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -5,6 +5,23 @@
   "sidebarTitle": { "message": "Tree Style Tab" },
   "sidebarToggleDescription": { "message": "\"Tree Style Tab\" Sidebar Ein-/Ausblenden" },
 
+  "command_indent":                { "message": "Aktuellen Tab einrücken" },
+  "command_outdent":               { "message": "Aktuellen Tab ausrücken" },
+  "command_tabMoveUp":             { "message": "Aktuellen Tab nach oben schieben" },
+  "command_treeMoveUp":            { "message": "Aktuellen Zweig nach oben schieben" },
+  "command_tabMoveDown":           { "message": "Aktuellen Tab nach unten schieben" },
+  "command_treeMoveDown":          { "message": "Aktuellen Zweig nach unten schieben" },
+  "command_focusPrevious":         { "message": "Zum vorherigen Tab wechseln (Zweig ausklappen)" },
+  "command_focusPreviousSilently": { "message": "Zum vorherigen Tab wechseln (Zweig nicht ausklappen)" },
+  "command_focusNext":             { "message": "Zum nächsten Tab wechseln (Zweig ausklappen)" },
+  "command_focusNextSilently":     { "message": "Zum nächsten Tab wechseln (Zweig nicht ausklappen)" },
+  "command_tabbarUp":              { "message": "Zeilenweise in Tabs nach oben scrollen" },
+  "command_tabbarPageUp":          { "message": "Seitenweise in Tabs nach oben scrollen" },
+  "command_tabbarHome":            { "message": "Zum ersten Tab scrollen" },
+  "command_tabbarDown":            { "message": "Zeilenweise in Tabs nach unten scrollen" },
+  "command_tabbarPageDown":        { "message": "Seitenweise in Tabs nach unten scrollen" },
+  "command_tabbarEnd":             { "message": "Zum letzten Tab scrollen" },
+  
   "tab_closebox_tab_tooltip": { "message": "Tab schließen" },
   "tab_closebox_tree_tooltip": { "message": "Zweig schließen" },
   "tab_soundButton_muted_tooltip": { "message": "Stummschaltung für Tab aufheben" },
