--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -128,12 +128,12 @@
 
   "config_appearance_caption": { "message": "外観" },
 
-  "config_sidebarPosition_caption": { "message": "サイドバーの位置に合わせたスタイル" },
+  "config_sidebarPosition_caption": { "message": "サイドバーの位置に合わせたスタイル:" },
   "config_sidebarPosition_left": { "message": "左側用" },
   "config_sidebarPosition_right": { "message": "右側用" },
   "config_sidebarPosition_description": { "message": "※この設定はサイドバー自体の位置を変更しません。サイドバーをウィンドウの右側に移動するには、サイドバーのヘッダ上の切り替えメニューから「サイドバーを右側に移動」を選択して下さい。" },
 
-  "config_scrollbarMode_caption": { "message": "スクロールバーの表示" },
+  "config_scrollbarMode_caption": { "message": "スクロールバーの表示:" },
   "config_scrollbarMode_default": { "message": "通常表示" },
   "config_scrollbarMode_narrow":  { "message": "細く表示" },
   "config_scrollbarMode_overlay": { "message": "重ねて表示" },
