--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -133,6 +133,10 @@
   "config_sidebarPosition_right": { "message": "右側用" },
   "config_sidebarPosition_description": { "message": "※この設定はサイドバー自体の位置を変更しません。サイドバーをウィンドウの右側に移動するには、サイドバーのヘッダ上の切り替えメニューから「サイドバーを右側に移動」を選択して下さい。" },
 
+  "config_sidebarDirection_caption": { "message": "書字方向に合わせたスタイル:" },
+  "config_sidebarDirection_ltr": { "message": "LTR" },
+  "config_sidebarDirection_rtl": { "message": "RTL" },
+
   "config_scrollbarMode_caption": { "message": "スクロールバーの表示:" },
   "config_scrollbarMode_default": { "message": "通常表示" },
   "config_scrollbarMode_narrow":  { "message": "細く表示" },
