--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -133,6 +133,10 @@
   "config_sidebarPosition_right": { "message": "Linksbündig" },
   "config_sidebarPosition_description": { "message": "*Diese Einstellung ändert nicht die Position der Sidebar. Klicke dafür auf die Sidebar-Überschrift und dann auf \"Sidebar nach rechts (links) verschieben\"." },
 
+  "config_sidebarDirection_caption": { "message": "Schriftrichtung:" },
+  "config_sidebarDirection_ltr": { "message": "Von links nach rechts" },
+  "config_sidebarDirection_rtl": { "message": "Von rechts nach links" },
+  
   "config_scrollbarMode_caption": { "message": "Bildlaufleiste:" },
   "config_scrollbarMode_default": { "message": "Standard" },
   "config_scrollbarMode_narrow":  { "message": "Schmal" },
